--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,165 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.header-title{
+  margin-top: 70px;
+  font-size: 2.5rem;
+  margin-bottom: 20px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#form{
+  margin: 10px auto;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#search{
+  padding: 10px 20px;
+  width: 20rem;
+  border-radius: 5px;
+  border: none;
+  transition: 0.3s all ease;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#search:focus-within{
+  border: none;
+
+}
+
+body{
+  background-color: rgb(41, 41, 70);
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  padding: 20px 0;
   color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+main{
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.movie{
+  padding: 20px;
+  margin: 30px;
+  display: flex;
+  background-color: rgb(48, 78, 158);
+  border-radius: 10px;
+  max-width: 60vw;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.39);
+  justify-content: center;
+  align-items: center;
+}
+
+.movie-img{
+  width: 15rem;
+  height: 18rem;
+  border-radius: 5px;
+}
+
+.movie-info{
+  padding: 2rem;
+  /* display: flex;
+  flex-direction: column; */
+  /* justify-content: center; */
+
+}
+
+.movie-title{
+  font-size: 2rem;
+  margin: 5px 0 15px;
+}
+
+.movie-rating{
+  margin: 10px 0 25px;
+}
+
+.movie-button{
+  padding: 10px 20px;
+  margin: 15px 0;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: 0.5s ease;
+}
+
+.movie-button:hover{
+  opacity: 0.8;
+}
+
+@media screen and (max-width: 660px) {
+  .movie{
+      max-width: 90vw;
+      flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+
+  .movie-img{
+      border-radius: 5px;
   }
 }
+
+/* The Overlay (background) */
+.overlay { 
+  height: 100%;
+  width: 0;
+  position: fixed; 
+  z-index: 1;
+  left: 0;
+  top: 0;
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0, 0.9); 
+  overflow-x: hidden; 
+  transition: 0.5s; 
+  }
+  
+/* Position the content inside the overlay */
+.overlay-content {
+  position: relative;
+  top: 10%; 
+  width: 100%; 
+  text-align: center; 
+  margin-top: 30px; 
+}
+
+/* The navigation links inside the overlay */
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block; /* Display block instead of inline */
+  transition: 0.3s; /* Transition effects on hover (color) */
+}
+
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+  
+.card-modal{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.overview-modal {
+  width: 50vw;
+  text-align: center;
+  margin: 25px;
+}
+
+.img-modal{
+  width: 15rem;
+}
+
